test/TestSuite/Scheduler/Errors/container_duration.tjp
project test "Test" "1.0" 2007-10-31 +1m

task t "T" {
# MARK: error 3 container_duration
  effort 1d
  task s "S"
}

